--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,22 +1,22 @@
 <header class="page-header">
   <div class="container header-container">
     <nav class="header-nav">
-      <a class="logo header-logo" href="./index.html">
-        <img src="./images/logo.svg" alt="Logo" width="40" height="36" />Product
+      <a class="logo header-logo" href="/index.html">
+        <img src="/img/logo.svg" alt="Logo" width="40" height="36" />Product
       </a>
 
       <ul class="header-nav-list">
         <li class="header-nav-item">
-          <a class="header-nav-link current" href="./index.html">Product</a>
+          <a class="header-nav-link current" href="/index.html">Product</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="./pricing.html">Pricing</a>
+          <a class="header-nav-link" href="/pricing.html">Pricing</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="./customer.html">Customers</a>
+          <a class="header-nav-link" href="/customer.html">Customers</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="./resources.html">Resources</a>
+          <a class="header-nav-link" href="/resources.html">Resources</a>
         </li>
       </ul>
     </nav>
@@ -30,4 +30,55 @@
       </li>
     </ul>
   </div>
+
+  <!-- burger menu button -->
+  <input type="checkbox" id="burger-toggle" hidden>
+  <label for="burger-toggle" class="burger">
+    <span class="line"></span>
+  </label>
+
+  <!-- burger menu mobile -->
+
+  <div class="burger-beckground">
+    <div class="burger-menu">
+      <nav class="burger-menu-nav">
+        <ul class="burger-menu-list">
+          <li><a href="/index.html"></a>Product</li>
+          <li><a href="/pricing.html"></a>Pricing</li>
+          <li><a href="/customer.html"></a>Customers</li>
+          <li><a href="/resources.html"></a>Resources</li>
+        </ul>
+      </nav>
+      <div class="burger-menu-socialmedia">
+        <ul class="social-svg-list">
+          <li class="social-svg-list-item">
+            <a class="social-svg-list-link" href="" target="_blank" rel="noopener noreferrer nofollow"
+              aria-label="Instagram">
+              <svg class="social-svg" width="24" height="24">
+                <use href="/img/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-svg-list-item">
+            <a class="social-svg-list-link" href="" target="_blank" rel="noopener noreferrer nofollow"
+              aria-label="Facebook">
+              <svg class="social-svg" width="24" height="24">
+                <use href="/img/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-svg-list-item">
+            <a class="social-svg-list-link" href="" target="_blank" rel="noopener noreferrer nofollow"
+              aria-label="Twitter">
+              <svg class="social-svg" width="24" height="24">
+                <use href="/img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
 </header>
