--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,21 +1,149 @@
-.footer {
-  padding: 20px 0;
+.section-footer {
+  display: flex;
+  justify-content: space-between;
 }
-.footer-desc {
+
+.social-svg-list {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 16px;
+  margin-top: 18px;
+}
+
+.social-svg-list-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  background-color: #edfffc;
+  box-shadow: none;
+  outline: none;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-svg-list-link {
+  width: 24px;
+  height: 24px;
+  outline: none;
+}
+
+.social-svg {
+  fill: #02897a;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-svg-list-item:hover,
+.social-svg-list-item:focus-within {
+  background-color: #02897a;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+.social-svg-list-item:hover .social-svg,
+.social-svg-list-item:focus-within .social-svg {
+  fill: #edfffc;
+}
+
+.footer-nav {
+  display: flex;
+  gap: 129px;
+  margin-left: 146px;
+  margin-right: 83px;
+}
+
+.footer-text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: 8px;
+}
+
+.footer-nav-list {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 2.19;
+}
+
+.footer-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 325px;
+  height: 205px;
+}
+
+.footer-btn {
+  border-radius: 4px;
+  border: 1px solid transparent;
+  width: 131px;
+  height: 39px;
+  background-color: #02897a;
+  border-color: none;
+
+  font-weight: 700;
+  font-size: 16px;
   text-align: center;
+  color: #fff;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-link {
+
+.footer-btn:hover,
+.footer-btn:focus {
+  color: #173a56;
+  background-color: #fff;
+  border-color: #bcd0e5;
+}
+
+.wrapper-footer-form {
   position: relative;
+
 }
-.footer-link::before {
-  content: '';
+
+.wrapper-footer-input {
+  border: 1px solid #bcd0e5;
+  border-radius: 4px;
+  width: 100%;
+  height: 48px;
+  background-color: #fff;
+  padding-left: 42px;
+  outline: none;
+
+  color: #22343d;
+}
+
+.wrapper-footer-input::placeholder {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.75;
+  color: #02897a;
+}
+
+.wrapper-footer-svg {
   position: absolute;
-  bottom: 6%;
-  left: 50%;
-  transform: translateX(-50%) skewX(-12deg);
-  z-index: -1;
-  width: 110%;
-  height: 24%;
-  background-color: #41d1ff;
-  transition: 200ms ease;
+  width: 18px;
+  height: 28px;
+  fill: #02897a;
+
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.end-text {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  color: #22343d;
+  text-align: center;
+  margin-top: 16px;
+  margin-bottom: 40px;
 }
