--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,204 @@
-.header {
-  padding: 20px 0;
-}
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-.nav-logo {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-.nav-list {
+.logo {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+  gap: 16px;
+
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 0.93;
+  color: #173a56;
 }
-.nav-link {
+
+.main-btn {
+  display: none;
+}
+
+.page-header {
+  padding: 19px 0;
   position: relative;
-  display: block;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
 }
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+
+.header-container {
+  display: flex;
+  align-items: center;
 }
-.nav-link::after {
-  content: '';
+
+.header-logo {
+  margin-right: auto;
+}
+
+.header-nav-list {
+  display: none;
+}
+
+.auth-list {
+  display: none;
+}
+
+/* burger menu */
+.burger {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 28px;
+  height: 28px;
+  cursor: pointer;
+
   position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
+  top: 19px;
+  right: 32px;
+  z-index: 50;
 }
-.nav-link.active::after {
-  background: #747bff;
+
+.burger .line {
+  width: 100%;
+  height: 3px;
+  background: #173a56;
+  border-radius: 3px;
+  position: relative;
+  transition: opacity 250ms;
+  z-index: 50;
+}
+
+.burger .line::before,
+.burger .line::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: #000;
+  border-radius: 3px;
+  left: 0;
+  transition: transform 250ms, top 250ms, bottom 250ms;
+}
+
+.burger .line::before {
+  top: calc(-1 * 7px);
+}
+
+.burger .line::after {
+  bottom: calc(-1 * 7px);
+}
+
+.burger-beckground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(12px);
+  color: #fff;
+  transform: translateY(-100%);
+  transition: transform 250ms;
+  padding: 16px;
+}
+
+#burger-toggle:checked+.burger .line {
+  opacity: 0;
+}
+
+#burger-toggle:checked+.burger .line::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+#burger-toggle:checked+.burger .line::after {
+  bottom: 0;
+  transform: rotate(-45deg);
+}
+
+#burger-toggle:checked~.burger-beckground {
+  transform: translateY(0);
+}
+
+.burger-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.6;
+  text-align: start;
+  color: #22343d;
+}
+
+@media screen and (min-width: 1158px) {
+  .main-btn {
+    display: inline-block;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    min-width: 113px;
+    height: 42px;
+
+    font-weight: 600;
+    color: #fff;
+    background-color: #02897a;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .main-btn:hover,
+  .main-btn:focus {
+    color: #173a56;
+    background-color: #fff;
+    border-color: #bcd0e5;
+  }
+
+  .header-nav,
+  .header-nav-list,
+  .auth-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-nav {
+    margin-right: 76px;
+    flex-grow: 1;
+  }
+
+  .header-nav-list {
+    gap: 30px;
+  }
+
+  .header-nav-link {
+    display: block;
+    padding: 7px 0;
+    line-height: 1.75;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-nav-link:hover,
+  .header-nav-link:focus {
+    transform: scale(1.1);
+  }
+
+  .header-nav-link.current {
+    font-weight: 600;
+  }
+
+  .auth-list {
+    gap: 21px;
+  }
+
+  .auth-btn {
+    border: 1px solid #bcd0e5;
+    border-radius: 4px;
+    min-width: 105px;
+    height: 42px;
+    padding: 9px 24px;
+
+    font-weight: 600;
+    font-size: 16px;
+    color: #173a56;
+    background-color: #fff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .auth-btn:hover,
+  .auth-btn:focus {
+    color: #fff;
+    background-color: #02897a;
+    border-color: #02897a;
+  }
 }
