--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
-<footer class="container">
+<!-- <footer class="container">
     <div class="section-footer">
         <div>
-            <a class="logo header-logo" href="./index.html"><img src="./images/logo.svg" alt="Logo" width="40"
+            <a class="logo header-logo" href="/index.html"><img src="/img/logo.svg" alt="Logo" width="40"
                     height="36" />Product</a>
 
             <ul class="social-svg-list">
@@ -9,7 +9,7 @@
                     <a class="social-svg-list-link" href="" target="_blank" rel="noopener noreferrer nofollow"
                         aria-label="Instagram">
                         <svg class="social-svg" width="24" height="24">
-                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            <use href="/img/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
@@ -17,7 +17,7 @@
                     <a class="social-svg-list-link" href="" target="_blank" rel="noopener noreferrer nofollow"
                         aria-label="Facebook">
                         <svg class="social-svg" width="24" height="24">
-                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            <use href="/img/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
@@ -25,7 +25,7 @@
                     <a class="social-svg-list-link" href="" target="_blank" rel="noopener noreferrer nofollow"
                         aria-label="Twitter">
                         <svg class="social-svg" width="24" height="24">
-                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            <use href="/img/symbol-defs.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
@@ -60,11 +60,14 @@
             </p>
             <div class="wrapper-footer-form">
                 <input class="wrapper-footer-input" type="tel" placeholder="Enter your phone number" />
-                <img class="wrapper-footer-svg" src="./images/mobile-screen.svg" alt="mobile screen" />
+                <svg class="wrapper-footer-svg" width="18" height="28">
+                    <use href="/img/symbol-defs.svg#icon-mobile-screen"></use>
+                </svg>
+
             </div>
             <button class="footer-btn" type="submit">Sign up Now</button>
         </form>
     </div>
 
     <p class="end-text">Made With Love By Figmaland All Right Reserved</p>
-</footer>
+</footer> -->
